--- a/bootstrap-5.3.8-dist/css/bootstrap.css
+++ b/bootstrap-5.3.8-dist/css/bootstrap.css
@@ -808,6 +808,7 @@ progress {
 
 .col {
   flex: 1 0 0;
+  align-items: center;
 }
 
 .row-cols-auto > * {
@@ -3811,8 +3812,8 @@ textarea.form-control-lg {
   display: block;
   padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
   font-size: var(--bs-nav-link-font-size);
-  font-weight: var(--bs-nav-link-font-weight);
-  color: var(--bs-nav-link-color);
+  font-weight: bold;
+  color: #fcfdff;;
   text-decoration: none;
   background: none;
   border: 0;
@@ -3858,7 +3859,7 @@ textarea.form-control-lg {
 }
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
-  color: var(--bs-nav-tabs-link-active-color);
+  color: #fcfdff;;
   background-color: var(--bs-nav-tabs-link-active-bg);
   border-color: var(--bs-nav-tabs-link-active-border-color);
 }
@@ -3995,7 +3996,7 @@ textarea.form-control-lg {
   list-style: none;
 }
 .navbar-nav .nav-link.active, .navbar-nav .nav-link.show {
-  color: var(--bs-navbar-active-color);
+
 }
 .navbar-nav .dropdown-menu {
   position: static;
