--- a/bootstrap-5.3.8-dist/css/style.css
+++ b/bootstrap-5.3.8-dist/css/style.css
@@ -6,9 +6,25 @@
 #ededf2 : Cinza claro azulado
 #fcfdff : Branco um pouco mais escuro
 */
-.banner{
-    background-color:#cfd5e1 ;
+/* 
+titulos
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-weight: 900;
+  font-style: normal; */
 
+/* 
+textos
+    font-family: "Roboto", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 431;
+    font-style: normal;
+    font-variation-settings:
+        "wdth" 100;
+*/
+
+.banner{ 
+    background-color:#303030 ;
 }
 
 .banner-palavras{
@@ -16,7 +32,7 @@
 }
 
 .LogoCurriculo{
-    width: 5%;
+    width: 15%;
 }
 
 .titulos-bases{
@@ -25,4 +41,20 @@
 
 .alinha{
     margin-top: 2%;
+}
+
+.titulos{
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    font-weight: 900;
+    font-style: normal; */
+}
+
+.textos{
+    font-family: "Roboto", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 431;
+    font-style: normal;
+    font-variation-settings:
+        "wdth" 100;
 }
