--- a/bootstrap-5.3.8-dist/css/bootstrap.css
+++ b/bootstrap-5.3.8-dist/css/bootstrap.css
@@ -809,6 +809,7 @@ progress {
 .col {
   flex: 1 0 0;
   align-items: center;
+  margin: 1%;
 }
 
 .row-cols-auto > * {
@@ -4387,6 +4388,7 @@ textarea.form-control-lg {
   background-clip: border-box;
   border: var(--bs-card-border-width) solid var(--bs-card-border-color);
   border-radius: var(--bs-card-border-radius);
+  margin: 0 auto;
 }
 .card > hr {
   margin-right: 0;
